--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Würfelaktion mit Effekten</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js">function toggleStats() {
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>function toggleStats() {
   const statsContainer = document.getElementById('statsContainer');
   statsContainer.style.display = statsContainer.style.display === 'none' ? 'flex' : 'none';
 }
