--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@ document.addEventListener('keydown', function(e) {
 
 let globalEffects = JSON.parse(localStorage.getItem("globalEffects")) || [
   "Wenn du leer ausgehst nimm dir einen belibigen Rohstoff.",
-  "Lehmbrüche und Erzmienen Produzieren keine Handelswahren mehr,nimm dir statdessen zwei Rohstoffe",
-  "Forste und Weiden produzieren keine Handelswahren mehr,nimm dir statdessen zwei Rohstoffe",
-  "Felder und Weiden produzieren keine Handelswahren mehr,nimm dir statdessen zwei Rohstoffe",
-  "Der Spieler mit den Wenigsten Siegpunkten darf Städte und Siedlungen einen Rohstoff günstiger Bauen",
-  "Statt einer Fortschrittskarte erhilt man zwei, zählt nur für den Aktiven Spieler",
+  "Lehmbrüche und Erzmienen produzieren keine Handelswahren mehr,nimm dir stattdessen zwei Rohstoffe.",
+  "Forste und Weiden produzieren keine Handelswahren mehr,nimm dir stattdessen zwei Rohstoffe.",
+  "Felder und Weiden produzieren keine Handelswahren mehr,nimm dir stattdessen zwei Rohstoffe.",
+  "Der Spieler mit den wenigsten Siegpunkten darf Städte und Siedlungen einen Rohstoff günstiger Bauen.",
+  "Statt einer Fortschrittskarte erhält man zwei, zählt nur für den aktiven Spieler.",
   "Lehmbrüche liefern keine Waren mehr!",
   "Erzmienen liefern keine Waren mehr!",
   "Forste liefern keine Waren mehr!",
